kubernetes/cluster/grafana/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  hostnames:
    - grafana.jetersen.dev
  parentRefs:
    - name: envoy-proxy
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: grafana
          namespace: monitoring
          port: 80
